--- a/my-vendor-app/src/app/components/order/order/order.component.html
+++ b/my-vendor-app/src/app/components/order/order/order.component.html
@@ -1,7 +1,12 @@
 
 <div class="order-section">
-    
-    <app-order-add></app-order-add>
+    <div class="order-add">
+        <app-order-add></app-order-add>
+    </div>
+
+    <div class="order-list">
+        <app-order-list></app-order-list>
+    </div>
 
 </div>
 
