--- a/my-vendor-app/src/app/auth/component/username-verify/username-verify.component.html
+++ b/my-vendor-app/src/app/auth/component/username-verify/username-verify.component.html
@@ -1,25 +1,36 @@
-<h1>Password Reset</h1>
 
-<fieldset class="fieldset-style">
-  <legend>Step 1: Verify Username</legend>
+<div class="login-form">
+<h1 class ="h1">Password Reset</h1>
+
+<div class = "content">
+
+  <div class ="input-field">
   <span *ngIf="error_msg != ''">{{error_msg}} <br /></span>
-  <label>Enter the Username: </label>
-  <input type="text" [(ngModel)]="username">
-  <br /><br />
+  <input placeholder="ENTER USERNAME:" type="text" [(ngModel)]="username">
+  <div class="action button">
   <button (click)="onSubmit()"
-      [disabled]="!status">Verify Username</button>
-</fieldset >
+      [disabled]="!status">VERIFY</button>
+    </div>
+    </div>
+
+
+
 <br /> <br />
 <div *ngIf="showSecurityBox">
-  <fieldset class="fieldset-style">
-    <legend>Step 2: Verify Security Answer</legend>
+  
+  <div class ="input-field">
     <label>
       Security Question: {{dto?.securityQuestion}}
     </label>
+  
     <br /><br />
-    <label>Security Answer: </label><br />
-    <input type="text" [(ngModel)]="answer">
-    <br /><br />
+    <input placeholder = "ENTER ANSWER" type="text" [(ngModel)]="answer">
+    <div class="action button">
     <button (click)="onQuestionSubmit()"> Submit Answer</button>
-  </fieldset>
+  </div>
+  </div>
+  
+</div>
+
+</div>
 </div>
