--- a/my-vendor-app/src/app/auth/component/login/login.component.html
+++ b/my-vendor-app/src/app/auth/component/login/login.component.html
@@ -17,11 +17,12 @@
 
   <a class = "link" routerLink="/password-reset">FORGOT YOUR PASSWORD?</a>
 
+  <br /> <br /> <br />
 
-  <div class="action">
-    <input type="submit" value="Login" [disabled]="!loginForm.valid">
+  <div class="action button">
+    <button type="submit" value="Login" [disabled]="!loginForm.valid">LOGIN</button>
 
-      <a class= "action button" routerLink="/sign-up">Sign-Up</a>
+    <a routerLink="/sign-up"><button >SIGN UP</button></a>
   </div>
  
 
