--- a/my-vendor-app/src/app/auth/component/password-reset/password-reset.component.html
+++ b/my-vendor-app/src/app/auth/component/password-reset/password-reset.component.html
@@ -1,9 +1,22 @@
-<h1>Password Reset</h1>
+
+<div class="login-form">
+<h1 class ="h1">Password Reset</h1>
+
+<div class = "content">
 <span *ngIf="error_msg!=''">{{error_msg}}</span>
-<label>Enter the password: </label>
-<input type="password" [(ngModel)]="password" >
-<br /><br />
-<label>Re-enter the password: </label>
-<input type="password" [(ngModel)]="repassword" >
-<br /><br />
+
+
+<div class ="input-field">
+<input placeholder ="Enter new password:"type="password" [(ngModel)]="password" >
+</div>
+
+<div class ="input-field">
+<input placeholder ="Re-enter password:"type="password" [(ngModel)]="repassword" >
+</div>
+
+<div class="action button">
 <button  (click)="onReset()">Reset Password</button>
+</div>
+
+</div>
+</div>
