--- a/my-vendor-app/src/app/components/order/order/order.component.html
+++ b/my-vendor-app/src/app/components/order/order/order.component.html
@@ -1,12 +1,16 @@
-
 <div class="order-section">
-    <div class="order-add">
-        <app-order-add></app-order-add>
-    </div>
-
     <div class="order-list">
         <app-order-list></app-order-list>
     </div>
 
-</div>
+    <div class="order-add">
+        <app-order-stat></app-order-stat>
+    </div>
+    <br /> <br />
+    <br /> <br />
+    <br /> <br />
+    <div class="order-add">
+        <app-order-add></app-order-add>
+    </div>
 
+</div>
