--- a/src/app/components/view-account-details/view-account-details.component.html
+++ b/src/app/components/view-account-details/view-account-details.component.html
@@ -1,6 +1,1 @@
-<h1>Account Details</h1>
-<div class="account-details">
-    <app-view-account-details>
-        (getSingleCustomerEmitter)="onGetSingleCustomer($event)">
-    </app-view-account-details>
-</div>
+<p>view-account-details works!</p>
