--- a/src/app/components/place-order/place-order.component.html
+++ b/src/app/components/place-order/place-order.component.html
@@ -1,1 +1,148 @@
-<p>place-order works!</p>
+<html>
+
+<head>
+    <title>FOOD ORDER FORM</title>
+    <link rel="stylesheet" type="text/css" href="place-order.component.css">
+    <script type="text/javascript" src="place-order.component.ts">  </script>
+</head>
+
+</html>
+
+<body>
+    <div>
+        <h2>==========Place An Order==========</h2>
+    </div>
+
+    <table width="40%" id="alignment">
+        <tr>
+            <th>Food Item</th>
+            <th></th>
+            <th>Price($)</th>
+        </tr>
+        <tr>
+            <td>Barbeque Chicken Pizza</td>
+            <td> - </td>
+            <td>13.99</td>
+        </tr>
+        <tr>
+            <td>Cajun French Fries</td>
+            <td> - </td>
+            <td>8.99</td>
+        </tr>
+        <tr>
+            <td>Chicken Alfredo</td>
+            <td> - </td>
+            <td>15.99</td>
+        </tr>
+        <tr>
+            <td>Vegetable Fried Rice</td>
+            <td> - </td>
+            <td>10.99</td>
+        </tr>
+        <tr>
+            <td>Water Bottle</td>
+            <td> - </td>
+            <td>1.50</td>
+        </tr>
+    </table>
+</body>
+
+<h1>FIT Food - Order Form
+    <table style="background-color:aquamarine;margin-left: 100px;">
+        <tr>
+            <td>Branch : </td>
+            <td>
+                <select>
+                    <option>--Select Item--</option>
+                    <option>Galle</option>
+                    <option>Colombo</option>
+                </select>
+            </td>
+        </tr>
+        <tr>
+            <td>User name:</td>
+            <td>
+                <input type="text">
+            </td>
+        </tr>
+        <tr>
+            <td>Mobile: </td>
+            <td><input type="text" id="mblenmb" onfocusout="checkmob()"></td>
+        </tr>
+    </table>
+    <br></h1>
+
+        <form name="tblform">
+            <table width="80%" id="alignment">
+                <tr>
+                    <th>Food Item</th>
+                    <th> </th>
+                    <th>Quantity</th>
+                    <th>Price</th>
+                </tr>
+                <tr>
+                    <td>Item 1:</td>
+                    <td>
+                        <select id="item1">
+                            <option value="1">--Select Item--</option>
+                            <option value="Barbeque Chicken Pizza">Barbeque Chicken Pizza</option>
+                            <option value="Cajun French Fries">Cajun French Fries</option>
+                            <option value="Chicken Alfredo">Chicken Alfredo</option>
+                            <option value="Vegetable Fried Rice">Vegetable Fried Rice</option>
+                            <option value="Water Bottle ">Water Bottle </option>
+                        </select>
+                    </td>
+                    <td><input type="number" value="0" id="q1"></td>
+                    <td><input type="text" id="p1"></td>
+                </tr>
+                <tr>
+                    <td>Item 2:</td>
+                    <td>
+                        <select id="item2">
+                            <option value="1">--Select Item--</option>
+                            <option value="Barbeque Chicken Pizza">Barbeque Chicken Pizza</option>
+                            <option value="Cajun French Fries">Cajun French Fries</option>
+                            <option value="Chicken Alfredo">Chicken Alfredo</option>
+                            <option value="Vegetable Fried Rice">Vegetable Fried Rice</option>
+                            <option value="Water Bottle ">Water Bottle </option>
+                        </select>
+                    </td>
+                    <td><input type="number" value="0" id="q2"></td>
+                    <td><input type="text" id="p2"></td>
+                </tr>
+                <tr>
+                    <td>Item 3:</td>
+                    <td><select id="item3">
+                            <option value="1">--Select Item--</option>
+                            <option value="Barbeque Chicken Pizza">Barbeque Chicken Pizza</option>
+                            <option value="Cajun French Fries">Cajun French Fries</option>
+                            <option value="Chicken Alfredo">Chicken Alfredo</option>
+                            <option value="Vegetable Fried Rice">Vegetable Fried Rice</option>
+                            <option value="Water Bottle ">Water Bottle </option>
+                        </select>
+                    </td>
+                    <td><input type="number" value="0" id="q3"></td>
+                    <td><input type="text" id="p3"></td>
+                </tr>
+                <tr>
+                    <td>Item 4:</td>
+                    <td><select id="item4">
+                            <option value="1">--Select Item--</option>
+                            <option value="Barbeque Chicken Pizza">Barbeque Chicken Pizza</option>
+                            <option value="Cajun French Fries">Cajun French Fries</option>
+                            <option value="Chicken Alfredo">Chicken Alfredo</option>
+                            <option value="Vegetable Fried Rice">Vegetable Fried Rice</option>
+                            <option value="Water Bottle ">Water Bottle </option>
+                        </select>
+                    </td>
+                    <td><input type="number" value="0" id="q4"></td>
+                    <td><input type="text" id="p4"></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td><input type="submit" class="button" value="Create Bill" onclick=createBill()></td>
+                    <td><input type="reset" class="button" value="Clear"></td>
+                </tr>
+            </table>
+        </form>
