--- a/my-vendor-app/src/app/components/order/order-stat/order-stat.component.html
+++ b/my-vendor-app/src/app/components/order/order-stat/order-stat.component.html
@@ -1,7 +1,7 @@
 <div class="estat">
     <div *ngFor="let s of stat" class="sentry">
-    <span class="cName">
-        {{s.cName}}
+    <span class="orderStatus">
+        {{s.orderStatus}}
     </span>
     <br />
     <span class="count">
