orderForm Edit Api

--- a/my-vendor-app/src/app/components/order/order/order.component.html
+++ b/my-vendor-app/src/app/components/order/order/order.component.html
@@ -3,7 +3,7 @@
         <app-order-list></app-order-list>
     </div>
 
-    <div class="order-add">
+    <div class="order-stat">
         <app-order-stat></app-order-stat>
     </div>
     <br /> <br />
