--- a/my-vendor-app/src/app/components/order/order-list/order-list.component.html
+++ b/my-vendor-app/src/app/components/order/order-list/order-list.component.html
@@ -10,7 +10,9 @@
     Order cost: {{o.orderCost}}
     Customer's #: {{o.cPnumber}}
     <hr>
-    <a href ='javascript::void' (click)="onorderFormDelete(o.id)">delete</a>
+    <a href ='javascript::void' (click)="onorderFormDelete(o.id)">Delete</a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <a routerLink="./order-edit">Edit</a>&nbsp;&nbsp;&nbsp;
+
     <hr>
    </div>
 
