edit function in list

--- a/my-vendor-app/src/app/components/order/order-list/order-list.component.html
+++ b/my-vendor-app/src/app/components/order/order-list/order-list.component.html
@@ -11,7 +11,7 @@
     Customer's #: {{o.cPnumber}}
     <hr>
     <a href ='javascript::void' (click)="onorderFormDelete(o.id)">Delete</a>&nbsp;&nbsp;&nbsp;&nbsp;
-    <a routerLink="./order-edit">Edit</a>&nbsp;&nbsp;&nbsp;
+    <a routerLink="/order-edit">Edit</a>&nbsp;&nbsp;&nbsp;
 
     <hr>
    </div>
