--- a/my-vendor-app/src/app/components/order/order-edit/order-edit.component.html
+++ b/my-vendor-app/src/app/components/order/order-edit/order-edit.component.html
@@ -1,1 +1,23 @@
-<p>Edit works</p>
+<h1>Profile</h1>
+{{msg}}
+
+<form (submit)="onFormSubmit()" [formGroup]="orderEditForm">
+    
+    <label> Customer's Name: </label>
+    <input type="text" name="name" formControlName="cName">
+    <br /> <br />
+
+    <label> Order Status: </label>
+    <input type="text" name="orderStatus" formControlName="orderStatus">
+    <br /> <br />
+
+
+    <label> Cost of Order: </label>
+    <input type="text" name="cost" formControlName="orderCost">
+    <br /> <br />
+
+    <label> Customer's Phone Number </label>
+    <input type="text" name="cPnumber" formControlName="cPnumber">
+    <br /> <br />
+
+    <input type="submit" value="Order Update" [disabled]="!orderEditForm.valid">
