--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<h1>Hello Food App</h1>
+<h1>Greetings! Welcome to our Employee Management Canteen page!</h1>
 <div>
     <h3>Thank you For choosing our service!! </h3>
 </div>
