--- a/src/app/components/place-order/place-order.component.html
+++ b/src/app/components/place-order/place-order.component.html
@@ -30,19 +30,19 @@
             <td>8.99</td>
         </tr>
         <tr>
-            <td></td>
+            <td>Chicken Alfredo</td>
             <td> - </td>
-            <td>300.00</td>
+            <td>15.99</td>
         </tr>
         <tr>
-            <td>Vegetable Kottu </td>
+            <td>Vegetable Fried Rice</td>
             <td> - </td>
-            <td>200.00</td>
+            <td>10.99</td>
         </tr>
         <tr>
             <td>Water Bottle</td>
             <td> - </td>
-            <td>70.00</td>
+            <td>1.50</td>
         </tr>
     </table>
 </body>
@@ -85,10 +85,10 @@
                     <td>
                         <select id="item1">
                             <option value="1">--Select Item--</option>
-                            <option value="Chicken pizza">Chicken pizza</option>
-                            <option value="Vegetable Pizza">Vegetable Pizza</option>
-                            <option value="Chicken Kottu">Chicken Kottu</option>
-                            <option value="Vegetable Kottu">Vegetable Kottu</option>
+                            <option value="Barbeque Chicken Pizza">Barbeque Chicken Pizza</option>
+                            <option value="Cajun French Fries">Cajun French Fries</option>
+                            <option value="Chicken Alfredo">Chicken Alfredo</option>
+                            <option value="Vegetable Fried Rice">Vegetable Fried Rice</option>
                             <option value="Water Bottle ">Water Bottle </option>
                         </select>
                     </td>
@@ -100,10 +100,10 @@
                     <td>
                         <select id="item2">
                             <option value="1">--Select Item--</option>
-                            <option value="Chicken pizza">Chicken pizza</option>
-                            <option value="Vegetable Pizza">Vegetable Pizza</option>
-                            <option value="Chicken Kottu">Chicken Kottu</option>
-                            <option value="Vegetable Kottu">Vegetable Kottu</option>
+                            <option value="Barbeque Chicken Pizza">Barbeque Chicken Pizza</option>
+                            <option value="Cajun French Fries">Cajun French Fries</option>
+                            <option value="Chicken Alfredo">Chicken Alfredo</option>
+                            <option value="Vegetable Fried Rice">Vegetable Fried Rice</option>
                             <option value="Water Bottle ">Water Bottle </option>
                         </select>
                     </td>
@@ -114,10 +114,10 @@
                     <td>Item 3:</td>
                     <td><select id="item3">
                             <option value="1">--Select Item--</option>
-                            <option value="Chicken pizza">Chicken pizza</option>
-                            <option value="Vegetable Pizza">Vegetable Pizza</option>
-                            <option value="Chicken Kottu">Chicken Kottu</option>
-                            <option value="Vegetable Kottu">Vegetable Kottu</option>
+                            <option value="Barbeque Chicken Pizza">Barbeque Chicken Pizza</option>
+                            <option value="Cajun French Fries">Cajun French Fries</option>
+                            <option value="Chicken Alfredo">Chicken Alfredo</option>
+                            <option value="Vegetable Fried Rice">Vegetable Fried Rice</option>
                             <option value="Water Bottle ">Water Bottle </option>
                         </select>
                     </td>
@@ -128,10 +128,10 @@
                     <td>Item 4:</td>
                     <td><select id="item4">
                             <option value="1">--Select Item--</option>
-                            <option value="Chicken pizza">Chicken pizza</option>
-                            <option value="Vegetable Pizza">Vegetable Pizza</option>
-                            <option value="Chicken Kottu">Chicken Kottu</option>
-                            <option value="Vegetable Kottu">Vegetable Kottu</option>
+                            <option value="Barbeque Chicken Pizza">Barbeque Chicken Pizza</option>
+                            <option value="Cajun French Fries">Cajun French Fries</option>
+                            <option value="Chicken Alfredo">Chicken Alfredo</option>
+                            <option value="Vegetable Fried Rice">Vegetable Fried Rice</option>
                             <option value="Water Bottle ">Water Bottle </option>
                         </select>
                     </td>
