--- a/src/app/components/view-account-details/view-account-details.component.html
+++ b/src/app/components/view-account-details/view-account-details.component.html
@@ -1,1 +1,61 @@
-<p>view-account-details works!</p>
+
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Account registration form</title>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600' rel='stylesheet'
+        type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+    <style>
+    </style>
+</head>
+
+<body>
+    <div class="main-block">
+        <form action="/">
+            <h1>View Customer Account Details</h1>
+            <fieldset>
+                <legend>
+                    <h3>Account Details</h3>
+                </legend>
+                <div class="account-details">
+                    <div><label>Email*</label><input type="text" name="name" required></div>
+                    <div><label>Password*</label><input type="password" name="name" required></div>
+                    <div><label>Repeat email*</label><input type="text" name="name" required></div>
+                    <div><label>Repeat password*</label><input type="password" name="name" required></div>
+                </div>
+            </fieldset>
+            <fieldset>
+                <legend>
+                    <h3>Personal Details</h3>
+                </legend>
+                <div class="personal-details">
+                    <div>
+                        <div><label>Name*</label><input type="text" name="name" required></div>
+                        <div><label>Phone*</label><input type="text" name="name" required></div>
+                        <div><label>Customer Balance*($)</label><input type="text" name="name"></div>
+                        <div><label>Add to Balance*($)</label><input type="text" name="name"></div>
+                    </div>
+                </div>
+            </fieldset>
+            <fieldset>
+                <legend>
+                    <h3>Terms and Mailing</h3>
+                </legend>
+                <div class="terms-mailing">
+                    <div class="checkbox">
+                        <input type="checkbox" name="checkbox"><span>I agree with the terms and conditions that the
+                            following information is correct. </span>
+                    </div>
+                    <div class="checkbox">
+                        <input type="checkbox" name="checkbox"><span>Please check here if you would like to receive receipts and emails about upcoming food deals.</span>
+                    </div>
+                </div>
+            </fieldset>
+            <button type="submit" href="/">Submit</button>
+        </form>
+    </div>
+</body>
+
+</html>
