--- a/my-vendor-app/src/app/app.component.html
+++ b/my-vendor-app/src/app/app.component.html
@@ -13,7 +13,7 @@
   </div>
 
 <ul class="menu-items">
-    <li><a routerLink="/order">Order</a></li>
+    <li><a routerLink="/Order">Dashboard</a></li>
     <li><a routerLink="/login">Login</a></li>
     <li><a routerLink="/food">Food</a></li>
     <li><a routerLink="/inventory">Inventory</a></li>
