--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
     <a routerLink="login">Login</a>&nbsp;&nbsp;&nbsp;
     <!--<a routerLink="PlaceOrder">Place an Order</a> &nbsp;&nbsp;&nbsp;-->
     <a routerLink="ViewOrder">View an Order</a> &nbsp;&nbsp;&nbsp;
+    <!--<a routerLink="View Profile">Profile</a> &nbsp;&nbsp;&nbsp;-->
     <a routerLink="ViewAccountDetails">Edit Account Details</a> &nbsp;&nbsp;&nbsp;
    <!-- <a routerLink="AddBalance">Add Balance to Account</a> &nbsp;&nbsp;&nbsp;-->
    <!--<div class="login-container">
