--- a/src/app/components/show-foods/show-foods.component.html
+++ b/src/app/components/show-foods/show-foods.component.html
@@ -8,5 +8,8 @@
   <strong>Category: {{f.foodCategory}}&nbsp;&nbsp;</strong><br />
   <strong>Price: {{f.foodPrice}}&nbsp;&nbsp;</strong><br />
   <strong>{{f.vendorName}}&nbsp;&nbsp;</strong>
-  <a routerlink><button>Add to Cart</button></a>
+  <a routerLink="/PlaceOrder"><button>Add to Cart</button></a>
+</div>
+<div>
+  <router-outlet></router-outlet>
 </div>
