--- a/src/app/components/show-foods/show-foods.component.css
+++ b/src/app/components/show-foods/show-foods.component.css
@@ -80,6 +80,8 @@
       max-width: 300px;
       margin: auto;
       text-align: center;
+      float:left;
+      padding: 50px;
     }
     
     .title {
